Sat Mar 26 22:51:33 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb (_callback_entry_class?): add for checking whether
	  a class is available for a callback entry. 

	* ext/tk/lib/tk.rb (after_cancel): add Tk.after_cancel(afterID) method.

	* ext/tk/lib/tk.rb (array2tk_list): change from private module method
	  of TkComm to public module method.

	* ext/tk/lib/tk.rb (cget): add check that slot argument is not
	  empty string. 

	* ext/tk/lib/tk.rb (configinfo): ditto.

	* ext/tk/lib/tk/itemconfig.rb (itemcget): add check that slot argument
	  is not empty string.

	* ext/tk/lib/tk/itemconfig.rb (itemconfiginfo): ditto.

	* ext/tk/lib/tk/entry.rb: add TkEntry#icursor and icursor= (alias of
	  cursor and cursor= method). 

	* ext/tk/lib/tk/font.rb: improve font treatment when the font name is
	  empty string.

	* ext/tk/lib/tk/variable.rb: add :variable, :window and :procedure
	  type. 

	* ext/tk/lib/tk/variable.rb: improve treatment of array-type
	  tkvariable. 

	* ext/tk/lib/tkextlib/blt.rb: add commands for zooming.

	* ext/tk/lib/tkextlib/blt/*: bug fix.

	* ext/tk/lib/tkextlib/treectrl/tktreectrl.rb: bug fix and add methods
	  to call TreeCtrl commands for bindings.

	* ext/tk/sample/tkextlib/blt/*: new sample scritps.

	* ext/tk/sample/tkextlib/treectrl/*: ditto.

Fri Mar 25 10:53:16 2005  WATANABE Hirofumi  <eban@ruby-lang.org>

	* configure.in (WIN32_LEAN_AND_MEAN): removed because a lot of
	  troubles.  [ruby-list:40721]

Thu Mar 24 23:10:44 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (macro_defined?): try to compile for an old compiler
	  which doesn't bail out at #error directive.  [ruby-dev:25818]

	* lib/mkmf.rb (check_sizeof): refine logging messages.

Wed Mar 23 19:08:10 2005  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/utils.rb (WEBrick::Utils.create_listeners):
	  - should raise ArgumentError if no port is specified.
	  - even if the specified port is 0, all TCPServers should be