@@ -1,7 +1,7 @@
 # 
 # = fileutils.rb
 # 
-# Copyright (C) 2000-2005 Minero Aoki <aamine@loveruby.net>
+# Copyright (c) 2000-2005 Minero Aoki <aamine@loveruby.net>
 # 
 # This program is free software.
 # You can distribute/modify this program under the same terms of ruby.
@@ -117,7 +117,6 @@ module FileUtils
 
   alias chdir cd
 
-
   #
   # Options: (none)
   # 
@@ -139,7 +138,6 @@ module FileUtils
     end
     true
   end
-
 
   #
   # Options: mode noop verbose
@@ -224,7 +222,6 @@ module FileUtils
   end
   private :fu_mkdir
 
-
   #
   # Options: noop, verbose
   # 
@@ -245,7 +242,6 @@ module FileUtils
       Dir.rmdir dir.sub(%r</\z>, '')
     end
   end
-
 
   #
   # Options: force noop verbose
@@ -329,7 +325,6 @@ module FileUtils
     options[:force] = true
     ln_s src, dest, options
   end
-
 
   #
   # Options: preserve noop verbose
@@ -418,7 +413,8 @@ module FileUtils
   # Both of +src+ and +dest+ must be a path name.
   # +src+ must exist, +dest+ must not exist.
   #
-  # If +preserve+ is true, this method preserves owner, group and permissions.
+  # If +preserve+ is true, this method preserves owner, group, permissions
+  # and modified time.
   # If +dereference+ is true, this method copies a target of symbolic link
   # instead of a symbolic link itself.
   #
@@ -436,8 +432,8 @@ module FileUtils
 
   #
   # Copies stream +src+ to +dest+.
-  # +src+ must be respond to #read(n) and
-  # +dest+ must be respond to #write(str).
+  # +src+ must respond to #read(n) and
+  # +dest+ must respond to #write(str).
   #
   def copy_stream(src, dest)
     fu_copy_stream0 src, dest, fu_stream_blksize(src, dest)
@@ -450,7 +446,7 @@ module FileUtils
   end
   private :fu_copy_stream0
 
-  class CopyContext_
+  class CopyContext_   # :nodoc: internal use only
     include ::FileUtils
 
     def initialize(preserve = false, dereference = false, stat = nil)
@@ -623,7 +619,6 @@ module FileUtils
   end
   private :rename_cannot_overwrite_file?
 
-
   #
   # Options: force noop verbose
   # 
@@ -720,7 +715,7 @@ module FileUtils
         File.chmod 0777, fname
         retry
       end
-      raise
+      raise unless force
     end
   end
 
@@ -742,7 +737,6 @@ module FileUtils
       raise unless force
     end
   end
-
 
   #
   # Returns true if the contents of a file A and a file B are identical.
@@ -780,7 +774,6 @@ module FileUtils
     false
   end
 
-
   #
   # Options: mode noop verbose
   # 
@@ -806,7 +799,6 @@ module FileUtils
     end
   end
 
-
   #
   # Options: noop verbose
   # 
@@ -824,7 +816,6 @@ module FileUtils
     return if options[:noop]
     File.chmod mode, *list
   end
-
 
   #
   # Options: noop verbose
@@ -847,7 +838,6 @@ module FileUtils
     return if options[:noop]
     File.chown fu_get_uid(user), fu_get_gid(group), *list
   end
-
 
   #
   # Options: noop verbose
@@ -911,7 +901,6 @@ module FileUtils
       group   # FIXME
     end
   end
-
 
   #
   # Options: noop verbose
